# creative-assistant

./: .gitignore  .pre-commit-config.yaml  .projections.json  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: test.yaml
creative_assistant/: assistant.py
docs/: how-to-extend-creative-assistant.md
libs/creative-assistant/: Dockerfile  requirements.in  requirements.txt
libs/creative-assistant/creative_assistant/: __init__.py  assistant.py  chat_service.py  repositories.py
libs/creative-assistant/creative_assistant/entrypoints/: cli.py  server.py
libs/creative-assistant/creative_assistant/models/: chat.py  entity.py
libs/creative-assistant/scripts/: test-cli.sh  test-server.sh
libs/creative-assistant/tests/unit/: test_chat_service.py
libs/plugins/text_categorization/: Dockerfile  pyproject.toml  requirements.in
libs/plugins/text_categorization/docs/: how-to-use-text-categorizer-as-a-http-endpoint.md  how-to-use-text-categorizer-as-a-langchain-tool.md  how-to-use-text-categorizer-as-a-library.md
libs/plugins/text_categorization/tests/end-to-end/: test-cli.sh  test-docker.sh  test-server.sh
libs/plugins/text_categorization/tests/unit/: test_categorizer.py
libs/plugins/text_categorization/text_categorization/: categorizer.py  llms.py  tools.py
libs/plugins/text_categorization/text_categorization/entrypoints/: cli.py
scripts/: test-cli.sh  test-server.sh
tests/unit/: test_assistant.py
ui/web/: .eslintrc.cjs  angular.json  package-lock.json  package.json
ui/web/src/: index.html
ui/web/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
ui/web/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
ui/web/src/app/components/chat-list/: chat-list.component.css  chat-list.component.html  chat-list.component.ts
ui/web/src/app/components/message/: message.component.css  message.component.html  message.component.ts
ui/web/src/app/components/prompt/: prompt.component.css  prompt.component.html  prompt.component.ts
ui/web/src/app/models/: chat.ts  message.ts
ui/web/src/app/services/: assistant.service.ts  chat.service.ts
